--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <title>City Guide App</title>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=%REACT_APP_GOOGLE_MAP_API_KEY%"></script> 
   </head>
   <body>
     <div id="root"></div>
